# Boilerplate-FastAPI

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  example.secrets.toml  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 2021-09-26_02:24:57_6073f90c5a44.py  2021-10-01_17:57:01_291c37b08074.py  2021-10-01_22:37:05_780aee67ba88.py
src/application/: __main__.py  app.py  auth.py  config.py  database.py  exeptions.py  models.py
src/application/accounts/: __init__.py  api.py  models.py  schemas.py  services.py
src/application/auth/: __init__.py  api.py  dependencies.py  models.py  schemas.py  services.py
src/utils/: append_updates.py
tests/: database.py
tests/application/: test_app.py  test_example.py
